pkg/lang/testdata/ub/comprehensions/valid/siblings-same-name.ub
locals: {
  xs: [1, 2]
  a:  [ for x in local.xs : x ]
  b:  [ for x in local.xs : x + 1 ]
}
