pkg/lang/testdata/ub/comprehensions/invalid/deep-rebind.ub
locals: {
  xs: [1, 2]
  zs: [ for a in local.xs : [ for b in local.xs : [ for a in local.xs : a + b ] ] ]
}
